# voxels

./: .gitignore  Cargo.toml
assets/: atlas.xcf
src/: assets.rs  camera.rs  game.rs  input.rs  main.rs  mesh.rs  meshifier.rs  object.rs  shader.wgsl  texture.rs
src/game/: atlas.rs  block.rs  chunk.rs  entity.rs  mod.rs  physics.rs  physics_engine.rs  player.rs  world.rs  worldgen.rs
src/server/: connection.rs  message.rs  mod.rs
