[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = { version = "0.18", features = ["serde"] }
rand = "0.8"
bevy_ecs = "0.12"
noise = "0.8"
quinn = { version = "0.10", features = ["runtime-async-std"] }
uuid = "1.7"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
rcgen = "0.12"
futures = "0.3"
async-std = { version = "1", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.30"
itertools = "0.12"
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
